# platform.core.appfw.app2sd

./: AUTHORS  CMakeLists.txt  app2sd.manifest  app2sd.manifest.in  app2sd.pc.in
common/inc/: app2ext_utils.h
common/src/: app2ext_utils.c
debian/: app2sd-dev.install.in  changelog  control
inc/: SLP_app2ext_PG.h  app2ext_interface.h
packaging/: app2sd.changes  app2sd.manifest  app2sd.spec
plugin/app2sd/: CMakeLists.txt  app2sd-server.service.in  org.tizen.app2sd.conf.in  org.tizen.app2sd.service.in
plugin/app2sd/inc/: SLP_app2sd_PG.h  app2sd_client_interface.h  app2sd_interface.h  app2sd_internals.h
plugin/app2sd/server/: .app2sd_server.c.swp  app2sd_server.c  org.tizen.app2sd.service.in
plugin/app2sd/src/: app2sd_client_interface.c  app2sd_interface.c  app2sd_internals.c  app2sd_internals_registry.c  app2sd_internals_utils.c  app2sd_server.c
src/: app2ext_interface.c
test/: CMakeLists.txt
test/src/: test_app2ext.c
