CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(test_app2ext C)

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR})
SET(SRCS
	${SOURCE_DIR}/test/src/test_app2ext.c)

### Local include directories
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)

ADD_EXECUTABLE(test_app2ext ${SRCS})
TARGET_LINK_LIBRARIES(test_app2ext app2ext ${pkgs_LDFLAGS})
SET_TARGET_PROPERTIES(test_app2ext PROPERTIES COMPILE_FLAGS ${CFLAGS} "-fPIE")
SET_TARGET_PROPERTIES(test_app2ext PROPERTIES LINK_FLAGS "-pie")

INSTALL(TARGETS test_app2ext DESTINATION /usr/bin COMPONENT Runtime)

